# pong

./: README.md  embed.py  meson.build
include/pong/: math.h  memory.h  pong.h  vulkan.h  window.h
shaders/: base.frag  base.vert
src/: entry.c  memory.c  pong.c
src/vulkan/: buffer.c  command_buffer.c  command_pool.c  descriptor.c  device.c  framebuffers.c  images.c  instance.c  physical.c  pipeline.c  pipeline_layout.c  render_pass.c  shaders.c  surface.c  swapchain.c  sync.c  views.c  vulkan.c  vulkan.h
src/window/: display.c  keyboard.c  vulkan.c  window.c  window.h  xdg_decoration.c  xdg_surface.c  xdg_toplevel.c
